# nuvlaedge-common

./: .coveragerc  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
.github/workflows/: main.yml  release.yml
docs/: README.md
nuvlaedge/: __init__.py  constant_files.py  constants.py
nuvlaedge/broker/: __init__.py  file_broker.py  models.py
nuvlaedge/common/: logger.py
nuvlaedge/models/: messages.py  nuvla_resources.py  peripheral.py
nuvlaedge/peripherals/: models.py  peripheral.py  peripheral_manager.py  peripheral_manager_db.py
tests/: test_dummy.py
tests/broker/: test_file_broker.py
tests/common/: test_utils.py
tests/models/: test_messages.py
tests/peripherals/: test_peripheral_manager.py  test_peripheral_manager_db.py
