[tool.poetry]
name = "nuvlaedge-common"
version = "0.0.1"
description = "Set of common libraries, scripts and tools for the NuvlaEdge microservices"
authors = ["Nacho <nacho@sixsq.com>"]
readme = "README.md"
packages = [{include = "nuvlaedge"}]


[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.5"
filelock = "^3.9.0"
iterators = "^0.2.0"
nuvla-api = "^3.0.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
mock = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
